[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "Cython", "numpy"]

[project]
name = "ieeg"
version = "0.1"
description = "A Python package for iEEG data processing."
authors = [
    {name = "Aaron Earle-Richardson", email = "ae166@duke.edu"}
]
dynamic = ["dependencies"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["ieeg"]
exclude = ["_tests*"]

[project.license]
file = "LICENSE"

[project.urls]
Source = "https://github.com/coganlab/IEEG_Pipelines"

[tool.setuptools.dynamic]
dependencies = {file = ["envs/requirements.txt"]}
