[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "Cython", "numpy"]

[project]
name = "ieeg"
version = "0.2"
description = "A Python package for iEEG data processing."
authors = [
    {name = "Aaron Earle-Richardson", email = "ae166@duke.edu"}
]
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["ieeg", "ieeg*"]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/coganlab/IEEG_Pipelines"
Source = "https://github.com/coganlab/IEEG_Pipelines"
Issues = "https://github.com/coganlab/IEEG_Pipelines/Issues"
Documentation = "https://ieeg-pipelines.readthedocs.io/en/latest/"

[tool.setuptools.dynamic]
dependencies = {file = ["envs/requirements.txt"]}
